# rust_web_server

./: .env.example  .gitignore  Cargo.toml  diesel.toml
migrations/2024-07-14-144944_create_charts/: down.sql  up.sql
migrations/2024-07-14-150250_add_chart_name_to_charts/: down.sql  up.sql
migrations/2024-07-15-010217_add_chart_data/: down.sql  up.sql
migrations/2024-07-15-011153_remove_unused_columns_from_charts/: down.sql  up.sql
migrations/2024-07-15-111943_add_additional_fields_to_charts/: down.sql  up.sql
src/: errors.rs  main.rs  models.rs  routes.rs  schema.rs  state.rs
src/handlers/: astro_details.rs  hello.rs  mod.rs  save_chart.rs
src/handlers/charts/: create.rs  delete.rs  get.rs
