[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenvy = "0.15.7"
tracing-subscriber = "0.3"  
log = "0.4"
hyper = "1.4.0"
serde_json = "1.0"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.61"

# uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
# diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json"] }
# diesel_migrations = "2"
# deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
# chrono = { version = "0.4.26", features = ["serde"] }
